software-docs/template/static/css/styles.css
.md-button:link,
.md-button:visited,
.md-button:active,
.md-button {
    display: inline-block;
    padding: 8px 16px;
    margin: 4px;
    font-size: 14px;
    color: white;
    background-color: #004791;
    text-decoration: none;
    border-radius: 4px;
    box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.2);
    transition: box-shadow 0.3s ease;
}

.md-button:hover {
    background-color: #6298d2 !important;
    color: white;
}

.md-sidebar {
    height: 100%;
    overflow-y: hidden;
    background-color: #ebe5e0;
    box-shadow: none;
    border-bottom: none;
}

.md-elipsis,
.md-elipsis:link,
.md-elipsis:visited {
    color: black !important;
}

.md-ellipsis:hover {
    color: black;
    font-weight: bold;
}

h1, h2, h3, h4 {
    font-family: 'Montserrat', serif; 
    color: #004791 !important;
    font-weight: 600 !important;
}

.md-nav__title,
.md-footer,
.md-header__title {
    display: none;
}

.md-header {
    background-color: white;
    padding: 0;
    box-shadow: none;
    border-bottom: none;
}

.md-search__form {
    background-color: #ebe5e0;
    border: 1px solid #ccc;
}

.md-search__form:hover,
.md-search__form:focus-within {
    background-color: white;
    border-color: #888;
}

.md-search__input {
    background-color: transparent;
    color: black;
}

.md-search__input:focus {
    background-color: #fff;
    outline: none;
}

.md-search__input::placeholder {
    color: #888;
}

